--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "react-hot-toast": "^2.5.2",
-        "react-loader-spinner": "^6.1.6",
+        "react-loading-skeleton": "^3.5.0",
         "react-router-dom": "^7.7.1"
     },
     "devDependencies": {
